added flow data step in flow1

--- a/ifs.ini
+++ b/ifs.ini
@@ -12,7 +12,7 @@
 [MAGIC_ENV]GeneralErrorLog=* %log%server_error.log
 [MAGIC_ENV]Filters=ibolt_internal:0% |
 [MAGIC_LOGICAL_NAMES]webmonitorfilesystem=%Magicxpi%scripts%sl%webmonitor%sl%
-[MAGIC_LOGICAL_NAMES]projects=C:\\Users\\pkamthe\\Documents\\Magic\\Projects%sl%
+[MAGIC_LOGICAL_NAMES]projects=D:\\PKProjects%sl%
 [MAGIC_LOGICAL_NAMES]currentprojectdir=%projects%XPIColab%sl%
 [MAGIC_LOGICAL_NAMES]currentproject=%currentprojectdir%XPIColab.ibp
 [MAGIC_SERVICES]Route=Route,IFS,,
